<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entryValues="@array/notificationOptionsValues" android:entries="@array/notificationOptions" android:positiveButtonText="@android:string/ok" android:negativeButtonText="@android:string/cancel" android:title="@string/settings_notification" android:dialogTitle="@string/settings_notification" android:key="notifications" android:defaultValue="0"/>
    <PreferenceCategory android:title="Lyrics Viewer Display">
        <EditTextPreference
            android:key="viewer_font_size"
            android:title="@string/settings_viewer_font_size"
            android:numeric="integer"
            android:maxLength="2"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference
		    android:key="viewer_font_color"
		    android:title="@string/settings_viewer_font_color"
		    android:defaultValue="@integer/COLOR_WHITE"
		    alphaSlider="false"
		/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference
		    android:key="viewer_bg_color"
		    android:title="@string/settings_viewer_bg_color"
		    android:defaultValue="@integer/COLOR_BLACK"
		    alphaSlider="false"
		/>
    </PreferenceCategory>
    

</PreferenceScreen>